# despertador

./: .gitignore  Despertador.spec  alarm.py  alarme.py  alarmes.db  config.py  db.py  janela_nova.py  main.py  main_window.py  multi_widgets2.py  pyproject.toml
old/: janela_alarme.py  janela_alarme.ui  janela_alarme_ui.py
